Added get styles handler
